tech: fix prb chargement logo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import { Image } from 'astro:assets';
         <div class='colonne'>
           <p>La solution futée à vos projets</p>
 
-          <Image src={imgRenard} alt='' />
+          <img src='/kilix/img/logo-renard.png' alt='' />
         </div>
       </section>
       <section id='demarche'>
@@ -102,6 +102,10 @@ import { Image } from 'astro:assets';
       </section>
     </main>
 
-    <footer role='contentinfo'></footer>
+    <footer role='contentinfo'>
+      <ul>
+        <li><a href='/kilix/design2'>Idée design</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
